# thufood-tgbot

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  canteens.txt
config/: thufood.yaml
src/: bot.rs  canteen.rs  commands.rs  config.rs  main.rs  utils.rs
src/commands/: canteen.rs  drink.rs  help.rs  meow.rs  twd2.rs
src/services/: counter.rs
