[package]
name = "thufood-tgbot"
authors = ["Sirui Mu <msrlancern@gmail.com>"]
version = "0.3.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2"
lazy_static = "1"
log = "0.4"
pretty_env_logger = "0.4"
rand = { version = "0.8", features = ["std", "std_rng"] }
serde = { version = "1", features = ["derive"] }
teloxide = { version = "0.5", features = ["auto-send", "macros"] }
toml = "0.5"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
